--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
     background-color: bisque;
+    font-family: 'Arial', sans-serif;
 }
 
 .header {
     background-color: burlywood;
     padding: 10px;
     text-align: center;
+    font-size: 20px;
 }
 
 .recipes {
@@ -13,4 +15,9 @@ body {
     padding: 10px;
     text-align: center;
     margin: 10px;
+    font-size: 25px;
+}
+
+.recipes a {
+    font-size: 25px;
 }
